--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>test</title>
+    <title>Main</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">    
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,10 +26,11 @@
         "owner": {
             "prototype": "montage/ui/loader.reel"
         }
+    
     }
     </script>
 </head>
 <body>
-    <span class="loading"></span>
+<div class="loading">Loading...</div>
 </body>
 </html>
